# SnippetFlow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  README_JA.md  RUST_PORTING.md  index.html  package-lock.json  package.json  snippets.json.bak  tsconfig.json  vite.config.ts
.agents/: AGENTS.md  INSTRUCTIONS.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPING.md  DIAGRAM.md  FOOTPRINTS.md  RELEASE.md  SPEC.md  TEST_REPORT.md  TODO.md  USER_GUIDE.md  test_report.md
docs/en/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  DIAGRAM.md  FOOTPRINTS.md  INSTRUCTIONS.md  RELEASE.md  SECURITY.md  SPEC.md  TESTING.md  TEST_REPORT.md  TODO.md  USER_GUIDE.md
docs/ja/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  DIAGRAM.md  FOOTPRINTS.md  INSTRUCTIONS.md  RELEASE.md  SECURITY.md  SPEC.md  TESTING.md  TEST_REPORT.md  TODO.md  USER_GUIDE.md
src/: App.tsx  index.css  main.rs  types.ts  utils.ts
src-egui/: app.rs  main.rs  model.rs  storage.rs  theme.rs  ui.rs
src-egui/ui/: compare.rs  form.rs  list.rs  merge.rs  mod.rs  stats.rs
src-react/: App.tsx  types.ts  utils.ts
src-react/components/: SnippetCompare.tsx  SnippetForm.tsx  SnippetList.tsx  SnippetMerge.tsx  StatsPanel.tsx
src-react/hooks/: useSnippets.ts
src-tauri/: Cargo.toml  snippets.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SnippetCompare.tsx  SnippetForm.tsx  SnippetList.tsx  SnippetMerge.tsx  StatsPanel.tsx
