[package]
name = "snippet_manager"
version = "1.4.0"
edition = "2021"
publish = false

[dependencies]
# UPDATE 2026-07-01: Windows低リソース・透過ウィンドウに対応した egui と eframe の定義
eframe = { version = "0.22.0", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.2" # クリップボードへのセーフコピー用
winapi = { version = "0.3.9", features = ["winuser"] }
chrono = { version = "0.4.39", features = ["serde"] }
rfd = "0.12"

