[package]
name = "Snippetflow"
version = "1.6.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
rfd = "0.12"
# 2026-07-03: 共有ライブラリの参照追加
common_lib = { path = "../../common_lib" }
tauri-plugin-single-instance = "2.0.1"

[profile.release]
opt-level = "z"      # サイズ最優先の最適化
lto = true           # Link-Time Optimization の有効化
codegen-units = 1    # コードジェネレータのユニット数を1にして最適化を保護
panic = "abort"      # パニック時の巻き戻しコードを除外してサイズ削減
strip = true         # デバッグシンボルとシンボルテーブルの自動削除

